# pz4

./: .gitignore
langpz3/: .env-example  .gitignore  README.md  invoke-workflow2.py  langgraph.json  query-langgraph-example.py  query-trace-filter-out-scanned-example.py  requirements.txt  test-agent-local-studio-nostream.py  trash-test-wf2-localserver-to-cloud.py  use-workflow2.py
langpz3/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
langpz3/agent/: README.md  customer.json  test_local_mem-example.py  test_vector_mem-example.py  testmemory-locally.md  workflow2.py
langpz3/docs/: MemoryImplementationPlanForLangGraph.md  README-langsmith-memory-types.md  README-note-on-example-files.md  read-me-test-agent.md
langpz3/memory/: anonymous_memory.json
langpz3/tests/: test_cloud_deployment.py  test_workflow2_cloud.py  test_workflow2_local.py  test_workflow2_pytest.py
prizm/: README-runWcloud.md  README-runWlocalStudio.md  README-standAloneTest.md  README.md  package-lock.json  package.json
prizm/src/: langgraphClient.ts
pz3/: .gitignore  007_README.md  CLAUDE.md  README-quickstart.md  README.md  claude-proj-copy.sh  pz3.code-workspace
pz3/_flask-bridge-client-lsgraph/: README.md  langgraph-server.py  pyproject.toml
pz3/_flask-graph-gcp-bridge/: deployment-directions.md  main.py
pz3/client-agent/: .env.example  .env.template  README.md  _.env  app.json  metro.config.js  package-lock.json  package.json  test-memory-e2e.ts  theme.json  vite.config.ts
pz3/gmail-gcpWebhook/: processEmails.js
(+68 files in other folders)
