[tool.poetry]
name = "bridge-client-graph"
version = "0.1.0"
description = ""
authors = ["Richard Genet <richard.genet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.1"
langgraph = "^0.3.29"
langchain = "^0.3.23"
langchain-openai = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
